--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Band Template</title>
+    <title>Do Cup Chai</title>
     <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
     <!-- Bulma Version 0.9.0-->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
@@ -18,11 +18,11 @@
             <a class="navbar-item" href="https://bulma.io">
                 <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
             </a>
-            <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+            /*<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
+            </div>*/
         </div>
 
         <div id="navbarExampleTransparentExample" class="navbar-menu">
@@ -31,7 +31,7 @@
                     Home
                 </a>
                 <a class="navbar-item" href="https://bulma.io/">
-                    Band
+                    Shops
                 </a>
                 <a class="navbar-item" href="https://bulma.io/">
                     Tour
